--- a/index.html
+++ b/index.html
@@ -146,16 +146,13 @@ Instructor: Washington Valencia
 
 								<!-- Hosting -->
 								<li class="nav-item">
-
-									<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-haspopup="true"
-										aria-expanded="false" id="mainNavHosting">
-										<h3>Quiz #2 - IST 107 - <span class="text-danger">{{Replace with your Full
-												Name}}</span>
-										</h3>
+									<a class="nav-link" href="#" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="mainNavHosting">
+										<h3>Quiz #2 - IST 107 - <span class="text-danger">{{Replace with your Full Name}}</span></h3>
 									</a>
 
 
 								</li>
+								
 
 							</ul>
 
@@ -172,7 +169,7 @@ Instructor: Washington Valencia
 						<ul class="list-inline list-unstyled mb-0 d-flex align-items-end">
 
 							<li class="list-inline-item float-start">
-								<a href="#" class="btn btn-sm btn-primary btn-pill transition-hover-start m-0">
+								<a href="#"  class="btn btn-sm btn-primary btn-pill transition-hover-start m-0" id="changeNameButton">
 
 									<i class="fi fi-users m-0-xs"></i>
 
@@ -221,8 +218,8 @@ Instructor: Washington Valencia
 							</p><br><br>
 
 							<div class="mt-15 text-muted">
-								<h2>{{Replace with current date}} </h2>
-								<h2>{{Replace with your email}} </h2>
+								<h2 id="date">{{Replace with current date}} </h2>
+								<h2 id="email">{{Replace with your email}} </h2>
 							</div>
 
 						</div>
@@ -259,7 +256,7 @@ Instructor: Washington Valencia
 					<h2 class="h5 mb-1">
 						<span class="text-primary fw-bold">HTTP</span> <span class="fw-light">protocol</span>
 					</h2>
-					<p class="m-0">xx port / Layer 7</p>
+					<p class="m-0">80 port / Layer 7</p>
 
 				</div>
 
@@ -269,7 +266,7 @@ Instructor: Washington Valencia
 					<h2 class="h5 mb-1">
 						<span class="text-danger fw-bold">HTTPS</span> <span class="fw-light">protocol</span>
 					</h2>
-					<p class="m-0">xx port / Layer 7</p>
+					<p class="m-0">443 port / Layer 7</p>
 
 				</div>
 
@@ -279,7 +276,7 @@ Instructor: Washington Valencia
 					<h2 class="h5 mb-1">
 						<span class="text-warning fw-bold">SSH</span> <span class="fw-light">protocol</span>
 					</h2>
-					<p class="m-0">xx port / layer 7</p>
+					<p class="m-0">22 port / layer 7</p>
 
 				</div>
 
@@ -289,7 +286,7 @@ Instructor: Washington Valencia
 					<h2 class="h5 mb-1">
 						<span class="text-success fw-bold">DNS</span> <span class="fw-light">protocol</span>
 					</h2>
-					<p class="m-0">xx port / layer 7</p>
+					<p class="m-0">53 port / layer 7</p>
 
 				</div>
 
@@ -437,78 +434,11 @@ Instructor: Washington Valencia
 						</h2>
 
 
-						<div class="d-flex mb-4">
-
-							<!-- icon -->
-							<div class="text-primary">
-								<img width="40" height="20" src="demo.files/svg/various/line-chart.svg" alt="...">
-							</div>
-
-							<div class="mx-2">
-
-								<!-- heading -->
-								<h3 class="h5 fw-bold mb-1">
-									Item #1
-								</h3>
-
-								<!-- text -->
-								<p>
-									This is item #1.
-								</p>
-
-							</div>
-
-						</div>
-
-
-						<div class="d-flex mb-4">
-
-							<!-- icon -->
-							<div class="text-primary">
-								<img width="40" height="20" src="demo.files/svg/various/line-chart.svg" alt="...">
-							</div>
-
-							<div class="mx-2">
-
-								<!-- heading -->
-								<h3 class="h5 fw-bold mb-1">
-									Item #2
-								</h3>
-
-								<!-- text -->
-								<p>
-									This is item #2.
-								</p>
-
-							</div>
-
-						</div>
-
-						<div class="d-flex mb-4">
-
-							<!-- icon -->
-							<div class="text-primary">
-								<img width="40" height="20" src="demo.files/svg/various/line-chart.svg" alt="...">
-							</div>
-
-							<div class="mx-2">
-
-								<!-- heading -->
-								<h3 class="h5 fw-bold mb-1">
-									Item #3
-								</h3>
-
-								<!-- text -->
-								<p>
-									This is item #3.
-								</p>
-
-							</div>
-
-						</div>
+						
+						<div id="items"></div>
 
 						<div class="text-align-end">
-							<a href="#" class="btn btn-primary btn-soft">How many items would you like in
+							<a href="#" class="btn btn-primary btn-soft" id="button">How many items would you like in
 								the list?</a>
 						</div>
 
@@ -529,6 +459,7 @@ Instructor: Washington Valencia
 	<!-- /block : services -->
 	</div><!-- /#wrapper -->
 	<script src="assets/js/core.min.js"></script>
+	<script src="assets/js/lab2.js"></script>
 
 
 </body>
